add photo score handler
